# django-auth-bot

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
django_auth_bot/: asgi.py  settings.py  urls.py  wsgi.py
main/: models.py  signals.py
main/management/commands/: runbot.py
main/migrations/: 0001_initial.py
main/tasks/: notify_on_login.py
main/telegram_bot/: commands_handler.py
main/tests/: conftest.py  test_auth_notification.py
